# gnushogi

./: .gitignore  AUTHORS  CHANGES  CONTRIB  ChangeLog  ChangeLog.old  INSTALL  Imakefile  Makefile.am  Makefile.custom  Makefile.in  NEWS  README  README-1.1p02  README-1.2p01  README-1.2p02  README-1.2p03  README.challenge  README.iss_client  README.maint  REMOTEHOSTS  TODO  TRANS.TBL  autogen.sh  config.h.in  configure  configure.ac  configure.in  parsebrd.c  parser.bison  parser.c  scanner.c  scanner.flex  version.h  western_moves.ps  xshogi.c  xshogi.h  xshogi.man
contrib/: tsuda.tbk
doc/: BOOKFILES  CHANGES  CONTRIB  GENERAL  INSTALL  Makefile  Makefile.am  Makefile.in  PORTING  PROBLEMS  README-FIRST  TODO  TRANS.TBL  gnushogi.1  gnushogi.6  gnushogi.html  gnushogi.info  gnushogi.info-1  gnushogi.info-2  gnushogi.ps  gnushogi.texi  gnushogi.texinfo  gnushogi_1.html  gnushogi_10.html  gnushogi_11.html  gnushogi_12.html  gnushogi_13.html  gnushogi_14.html  gnushogi_15.html  gnushogi_16.html  gnushogi_17.html  gnushogi_18.html  gnushogi_19.html  gnushogi_2.html  gnushogi_20.html  gnushogi_21.html  gnushogi_22.html  gnushogi_23.html  gnushogi_24.html  gnushogi_3.html  (+17 more)
eastern_bitmaps/: bigsolid.xbm  bigsolidR.xbm  bigsolidR_l.xbm  bigsolid_m.xbm  bishop.xbm  bishopP_l.xbm  bishopP_m.xbm  bishopR_l.xbm  bishopR_m.xbm  bishop_m.xbm  goldR_m.xbm  king.xbm  king_l.xbm  knight.xbm  knightP.xbm  knightPR_m.xbm  knightR_l.xbm  knightR_m.xbm  lancePR.xbm  lanceR.xbm  lance_l.xbm  lance_m.xbm  none_m.xbm  pawn.xbm  pawnP_l.xbm  pawnP_m.xbm  pawnR_m.xbm  rookR.xbm  rookR_m.xbm  silverPR_m.xbm  silverP_l.xbm  silverR_m.xbm  smallsolid.xbm  smallsolidR_l.xbm  smallsolidR_m.xbm
gnushogi/: Makefile.am  Makefile.in  Makefile.profile.in  TRANS.TBL  attacks.c  book.c  book.h  commondsp.c  cursesdsp.c  cursesdsp.h  debug.h  dspwrappers.c  dspwrappers.h  eval.c  eval.h  genmove.c  globals.c  gnushogi.h  init-common.c  init.c  main.c  makepattern.c  opts.h  pat2inc.c  pattern-common.c  pattern.c  pattern.h  rawdsp.c  rawdsp.h  search.c  sizetest.c  sysdeps.c  tcontrl.c  util.c
misc/: SHOGI.book  TRANS.TBL  basic.book  gnuminishogi.pat  gnushogi.book  gnushogi.lang  gnushogi.lng  gnushogi.pat  gnushogi.pattern  gnushogi.tbk  mkmakefile.mingw-on-cygwin  shogi-l.games.descr
misc/shogi-l.games/: game01  game02  game03  game04  game06  game07  game09  game10  game11  game12  game13  game14  game15  game17  game18  game19  game20  game22  game23  game24  game25  game27  game28  kio.match-91  kio.match-92  kisei-1.match-91  kisei-1.match-92  kisei-2.match-90  kisei-2.match-91  kisei-2.match-92  kisey-1.match-93  meijin.match-90  meijin.match-91  meijin.match-92  oi.match-90  oi.match-91  oi.match-92  osho.match-91  osho.match-92  osho.match-93  (+6 more)
misc/some.openings/: opening01  opening02
src/: .LVS_ENV  Makefile  README  ataks.c  ataks.h  book.c  book.h  debug10.h  debug12.h  dspcom.c  eval.c  eval.h  eval_data1.c  gdxbkstats.c  gdxstats.c  genmove.c  genmoves.c  globals.c  gnuan.c  gnupdisp.c  gnushogi.h  init.c  init_data1.c  init_data1b.c  init_data2.c  init_data2b.c  init_data3.c  init_data3b.c  init_data4.c  init_data4b.c  main.c  main_data1.c  main_data2.c  nondsp.c  pat2inc.c  pattern.c  pattern.h  search.c  size_test.c  sizetest.c  (+5 more)
western_bitmaps/: goldRW.xbm  kingRW.xbm  kingW.xbm  knightPW.xbm  lancePRW.xbm  pawnW.xbm  rookRW.xbm
win32/: config.h.in
xshogi/: BUGS  Makefile.am  Makefile.in  NEWS  README  README.xboard  REMOTEHOSTS  TRANS.TBL  bitmaps.h  parser.y  scanner.l  sysdeps.h  xshogi.c  xshogi.h  xshogifn.h
xshogi/eastern_bitmaps/: TRANS.TBL  bigblank.xbm  bigblankR.xbm  biglight.xbm  bigsolid.xbm  bigsolidR.xbm  bigsolidR_m.xbm  bigsolid_l.xbm  bigsolid_m.xbm  bishop.xbm  bishopP.top.xbm  bishopP.xbm  bishopPR.top.xbm  bishopPR.xbm  bishopPR_l.top.xbm  bishopPR_l.xbm  bishopPR_m.top.xbm  bishopPR_m.xbm  bishopP_l.top.xbm  bishopP_m.top.xbm  bishopP_m.xbm  bishopR.xbm  bishopR_m.xbm  bishop_l.xbm  bishop_m.xbm  gold.xbm  goldR.xbm  goldR_l.xbm  goldR_m.xbm  gold_l.xbm  gold_m.xbm  icon.xbm  king.xbm  kingR.xbm  kingR_l.xbm  kingR_m.xbm  king_m.xbm  knight.xbm  knightP.xbm  knightPR.xbm  (+72 more)
xshogi/new_eastern_bitmaps/: bigsolidR_l.xbm  bigsolid_l.xbm  bishopPR_l.xbm  bishopP_l.xbm  bishopR_l.xbm  bishop_l.xbm  goldR_l.xbm  gold_l.xbm  kingR_l.xbm  king_l.xbm  knightPR_l.xbm  knightP_l.xbm  knightR_l.xbm  knight_l.xbm  lancePR_l.xbm  lanceP_l.xbm  lanceR_l.xbm  lance_l.xbm  none_l.xbm  pawnPR_l.xbm  pawnP_l.xbm  pawnR_l.xbm  pawn_l.xbm  rookPR_l.xbm  rookP_l.xbm  rookR_l.xbm  rook_l.xbm  silverPR_l.xbm  silverP_l.xbm  silverR_l.xbm  silver_l.xbm  smallsolidR_l.xbm  smallsolid_l.xbm
xshogi/new_western_bitmaps/: bishopPRW.xbm  bishopPW.xbm  bishopRW.xbm  bishopW.xbm  goldRW.xbm  goldW.xbm  kingRW.xbm  kingW.xbm  knightPRW.xbm  knightPW.xbm  knightRW.xbm  knightW.xbm  lancePRW.xbm  lancePW.xbm  lanceRW.xbm  lanceW.xbm  noneW.xbm  pawnPRW.xbm  pawnPW.xbm  pawnRW.xbm  pawnW.xbm  rookPRW.xbm  rookPW.xbm  rookRW.xbm  rookW.xbm  silverPRW.xbm  silverPW.xbm  silverRW.xbm  silverW.xbm
xshogi/western_bitmaps/: TRANS.TBL  bishopPRW.xbm  bishopPW.xbm  bishopRW.xbm  bishopW.xbm  goldRW.xbm  goldW.xbm  kingRW.xbm  kingW.xbm  knightPRW.xbm  knightRW.xbm  knightW.xbm  lancePRW.xbm  lancePW.xbm  lanceRW.xbm  lanceW.xbm  noneW.xbm  pawnPRW.xbm  pawnPW.xbm  pawnRW.xbm  pawnW.xbm  rookPRW.xbm  rookPW.xbm  rookRW.xbm  rookW.xbm  silverPRW.xbm  silverPW.xbm  silverRW.xbm  silverW.xbm
