#
# Makefile for GNU Shogi
#
# Copyright (c) 2013 Yann Dirson and the Free Software Foundation
#
# This file is part of GNU Shogi.
#
# GNU Shogi is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 1, or (at your option)
# any later version.
#
# GNU Shogi is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with GNU Shogi; see the file COPYING.  If not, write to
# the Free Software Foundation, 675 Mass Ave, Cambridge, MA 02139, USA.
#

SUBDIRS = gnushogi xshogi doc

dist_noinst_DATA = \
	README.maint \
	ChangeLog.old \
	misc/gnushogi.pat \
	misc/gnuminishogi.pat \
	misc/gnushogi.tbk \
	misc/gnuminishogi.tbk

dist_doc_DATA = \
	CONTRIB
